# Daisu

./: CMakeLists.txt  LICENSE
cmake_modules/: FindEigen3.cmake
geom/: CMakeLists.txt  SO3.hpp
geom/test/: test_so3.cpp  test_so3_performance.cpp  test_so3_precision.cpp
